[package]
name = "ddsketch-agent"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
ddsketch_extended = []
serde = ["dep:serde", "smallvec/serde"]

[dependencies]
datadog-protos = { workspace = true }
float-cmp = { workspace = true, features = ["ratio"] }
ordered-float = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["union"] }

[dev-dependencies]
criterion = { workspace = true }
dhat = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
noisy_float = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = { workspace = true }

[[bench]]
name = "insert"
harness = false
