[package]
name = "ddsketch"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
ddsketch_extended = []
serde = ["dep:serde", "smallvec/serde"]

[dependencies]
datadog-protos = { workspace = true }
float-cmp = { workspace = true, features = ["ratio"] }
ordered-float = { workspace = true }
protobuf = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["union"] }

[dev-dependencies]
criterion = { workspace = true }
dhat = { workspace = true }
ndarray = { version = "0.17", default-features = false }
ndarray-stats = { version = "0.7", default-features = false }
noisy_float = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true, features = ["small_rng", "thread_rng"] }
rand_distr = { workspace = true }

[[bench]]
name = "agent_insert"
harness = false
