[package]
name = "foldspace"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
async-stream = { workspace = true }
datadog-protos = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tonic = { workspace = true, features = ["channel", "router", "server"] }
zstd = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
