[package]
name = "integration-check"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.100"
libc.workspace = true
tokio.workspace = true
