[package]
name = "memory-accounting"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ordered-float = { workspace = true }
snafu = { workspace = true }
ubyte = { workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
