[package]
name = "memory-accounting"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
metrics = { workspace = true }
ordered-float = { workspace = true }
pin-project = { workspace = true }
process-memory = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
ubyte = { workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
