load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "ottl",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "ottl",
    crate_root = "src/mod.rs",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
