[package]
name = "ottl"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[lib]
path = "src/mod.rs"

[dependencies]
chumsky = { workspace = true }
logos = { workspace = true, features = ["export_derive"] }

[dev-dependencies]
