[package]
name = "process-memory"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[dev-dependencies]
dhat = { workspace = true }
