[package]
name = "process-memory"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
simdutf8 = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "aix"))'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = { version = "0.6.0" }

[target.'cfg(not(target_os = "aix"))'.dev-dependencies]
dhat = { workspace = true }

# Run the runtime-allocation test without the libtest harness so that the harness's own
# lazy initializations (mpmc `Context`, `SyncWaker` mutex via `OnceBox`, etc.) cannot race
# with the dhat profiler and be attributed to the code under test. See issue #625.
[[test]]
name = "no_runtime_allocations"
path = "tests/no_runtime_allocations.rs"
harness = false
