[package]
name = "saluki-antithesis"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
antithesis = ["dep:antithesis_sdk", "antithesis_sdk/full", "dep:serde_json"]

[dependencies]
antithesis_sdk = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
