[package]
name = "saluki-api"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
axum-extra = { workspace = true, features = ["query"] }
http = { workspace = true }
