load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "saluki-app",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "saluki_app",
    deps = all_crate_deps(normal = True) + [
        "//lib/memory-accounting",
        "//lib/saluki-api",
        "//lib/saluki-common",
        "//lib/saluki-config",
        "//lib/saluki-core",
        "//lib/saluki-error",
        "//lib/saluki-io",
        "//lib/saluki-metadata",
        "//lib/saluki-metrics",
        "//lib/saluki-tls",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
