[package]
name = "saluki-app"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
full = ["api", "logging", "memory", "metrics", "tls"]
api = ["dep:axum", "dep:saluki-api", "dep:saluki-error", "dep:saluki-io", "dep:tokio", "dep:tower", "dep:tracing"]
logging = ["api", "dep:chrono", "dep:chrono-tz", "dep:iana-time-zone", "dep:saluki-common", "dep:serde", "dep:tracing", "dep:tracing-subscriber"]
memory = ["api", "metrics", "dep:bytesize", "dep:jemalloc_pprof", "dep:memory-accounting", "dep:saluki-common", "dep:saluki-config", "dep:saluki-error", "dep:serde", "dep:tokio", "dep:tracing"]
metrics = ["dep:saluki-common", "dep:saluki-core", "dep:metrics", "dep:tokio"]
tls = ["dep:saluki-error", "dep:saluki-tls"]
tls-fips = ["saluki-tls?/fips"]

[dependencies]
axum = { workspace = true, optional = true }
bytesize = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }
http = { workspace = true }
iana-time-zone = { workspace = true, optional = true }
jemalloc_pprof = { workspace = true, default-features = false, optional = true }
memory-accounting = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
rcgen = { workspace = true, features = ["crypto", "aws_lc_rs", "pem"] }
rustls = { workspace = true, features = ["tls12"] }
rustls-pemfile = { workspace = true, features = ["std"] }
saluki-api = { workspace = true, optional = true }
saluki-common = { workspace = true, optional = true }
saluki-config = { workspace = true, optional = true }
saluki-core = { workspace = true, optional = true }
saluki-error = { workspace = true, optional = true }
saluki-io = { workspace = true, optional = true }
saluki-metadata = { workspace = true }
saluki-tls = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "sync"], optional = true }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true, features = ["util"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "json", "local-time", "registry", "std", "tracing-log"], optional = true }
