[package]
name = "saluki-app"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
tls-fips = ["saluki-tls/fips"]

[dependencies]
axum = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
itoa = { workspace = true }
memory-accounting = { workspace = true }
metrics = { workspace = true }
rcgen = { workspace = true, features = ["crypto", "aws_lc_rs", "pem"] }
rustls = { workspace = true, features = ["tls12"] }
rustls-pki-types = { workspace = true }
ryu = { workspace = true }
saluki-api = { workspace = true }
saluki-common = { workspace = true }
saluki-config = { workspace = true }
saluki-core = { workspace = true }
saluki-error = { workspace = true }
saluki-io = { workspace = true }
saluki-metadata = { workspace = true }
saluki-metrics = { workspace = true }
saluki-tls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tonic = { workspace = true, features = ["router"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "local-time",
  "registry",
  "std",
  "tracing-log",
] }
