[package]
name = "saluki-common"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
crossbeam-queue = { workspace = true }
foldhash = { workspace = true }
http-body = { workspace = true }
indexmap = { workspace = true }
memory-accounting = { workspace = true }
papaya = { workspace = true }
pin-project = { workspace = true }
quick_cache = { workspace = true }
regex = { workspace = true, features = ["unicode-perl", "unicode-case"] }
saluki-error = { workspace = true }
saluki-metrics = { workspace = true }
serde_yaml = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["rt", "io-util", "macros", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
