[package]
name = "saluki-component-config"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
bytesize = { workspace = true }
saluki-context = { workspace = true }
saluki-io = { workspace = true }
serde = { workspace = true }
stringtheory = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
