[package]
name = "saluki-components"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
datadog-protos = { workspace = true }
ddsketch-agent = { workspace = true }
float-cmp = { workspace = true, features = ["ratio"] }
futures = { workspace = true }
hashbrown = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http-serde-ext = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-http-proxy = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
memory-accounting = { workspace = true }
metrics = { workspace = true }
pin-project = { workspace = true }
protobuf = { workspace = true }
regex = { workspace = true }
saluki-config = { workspace = true }
saluki-context = { workspace = true }
saluki-core = { workspace = true }
saluki-env = { workspace = true }
saluki-error = { workspace = true }
saluki-event = { workspace = true }
saluki-io = { workspace = true }
saluki-metadata = { workspace = true }
saluki-metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc"] }
serde_yaml = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
stringtheory = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
tower = { workspace = true, features = ["limit", "retry", "timeout", "util"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
saluki-metrics = { workspace = true, features = ["test"] }
