[package]
name = "saluki-components"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
python-checks = ["dep:pyo3"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
datadog-protos = { workspace = true }
ddsketch-agent = { workspace = true }
float-cmp = { workspace = true, features = ["ratio"] }
foldhash = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http-serde-ext = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-http-proxy = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
memory-accounting = { workspace = true }
metrics = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
otlp-protos = { workspace = true }
pin-project = { workspace = true }
prost = { workspace = true }
protobuf = { workspace = true }
pyo3 = { workspace = true, features = ["macros"], optional = true }
rand = { workspace = true, features = ["std", "std_rng"] }
regex = { workspace = true }
saluki-api = { workspace = true }
saluki-common = { workspace = true }
saluki-config = { workspace = true }
saluki-context = { workspace = true }
saluki-core = { workspace = true }
saluki-env = { workspace = true }
saluki-error = { workspace = true }
saluki-health = { workspace = true }
saluki-io = { workspace = true }
saluki-metadata = { workspace = true }
saluki-metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc"] }
serde_yaml = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
stringtheory = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
] }
tonic = { workspace = true }
tower = { workspace = true, features = ["limit", "retry", "timeout", "util"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pyo3-ffi = { workspace = true }
saluki-metrics = { workspace = true, features = ["test"] }
test-strategy = { workspace = true }
