[package]
name = "saluki-components"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
fips = ["saluki-io/fips"]
antithesis = ["dep:antithesis_sdk", "antithesis_sdk/full"]

[dependencies]
antithesis_sdk = { workspace = true, optional = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true, features = ["std"] }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
datadog-protos = { workspace = true }
ddsketch = { workspace = true }
facet = { workspace = true }
faster-hex = { workspace = true }
figment = { workspace = true }
float-cmp = { workspace = true, features = ["ratio"] }
fnv = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http-serde-ext = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-http-proxy = { workspace = true }
lru-slab = { workspace = true }
metrics = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
otlp-protos = { workspace = true }
piecemeal = { workspace = true }
pin-project = { workspace = true }
prometheus-exposition = { workspace = true }
prost = { workspace = true }
protobuf = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
regex = { workspace = true, features = ["unicode-perl"] }
resource-accounting = { workspace = true }
rmp-serde = { workspace = true }
saluki-api = { workspace = true }
saluki-common = { workspace = true }
saluki-component-config = { workspace = true }
saluki-config-tools = { workspace = true }
saluki-context = { workspace = true }
saluki-core = { workspace = true }
saluki-env = { workspace = true }
saluki-error = { workspace = true }
saluki-io = { workspace = true }
saluki-metadata = { workspace = true }
saluki-metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc"] }
serde_yaml = { workspace = true }
simdutf8 = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
stringtheory = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
] }
tonic = { workspace = true, features = ["router", "server"] }
tower = { workspace = true, features = ["limit", "retry", "timeout", "util"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true }
url = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
datadog-agent-config = { workspace = true }
datadog-agent-config-testing = { workspace = true }
derive-where = { workspace = true }
proptest = { workspace = true }
rcgen = { workspace = true, features = ["crypto", "aws_lc_rs", "pem"] }
rustls = { workspace = true }
saluki-metrics = { workspace = true, features = ["test"] }
saluki-tls = { workspace = true }
tempfile = { workspace = true }
test-strategy = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-rustls = { workspace = true }
