[package]
name = "saluki-config"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
figment = { workspace = true, features = ["env"] }
reqwest = { workspace = true, features = [
  "rustls-tls-native-roots-no-provider",
  "json",
] }
rustls = { workspace = true }
saluki-error = { workspace = true }
saluki-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "time"] }
tracing = { workspace = true }
[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
