[package]
name = "saluki-config"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
antithesis = ["dep:antithesis_sdk", "antithesis_sdk/full"]

[dependencies]
antithesis_sdk = { workspace = true, optional = true }
figment = { workspace = true, features = ["env"] }
saluki-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
