[package]
name = "saluki-config"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
# Exposes test-only helpers (for example, `ConfigurationLoader::for_tests` and `config_from`) as plain `pub` items
# so downstream crates can build configurations in their own tests. Not enabled in normal builds.
test-util = ["dep:tempfile"]

[dependencies]
figment = { workspace = true, features = ["env"] }
go-duration = { workspace = true }
saluki-antithesis = { workspace = true }
saluki-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
