[package]
name = "saluki-config2"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
facet = { git = "https://github.com/facet-rs/facet", rev = "40ab0de16221eae27b68b5234188e0142f9139b6", default-features = false }
facet-reflect = { git = "https://github.com/facet-rs/facet", rev = "40ab0de16221eae27b68b5234188e0142f9139b6", default-features = false, features = ["alloc"] }
facet-json = { git = "https://github.com/facet-rs/facet", rev = "40ab0de16221eae27b68b5234188e0142f9139b6", default-features = false }
facet-yaml = { git = "https://github.com/facet-rs/facet", rev = "40ab0de16221eae27b68b5234188e0142f9139b6", default-features = false }
facet-value = { git = "https://github.com/facet-rs/facet", rev = "40ab0de16221eae27b68b5234188e0142f9139b6", default-features = false, features = ["alloc", "std"] }
saluki-error = { workspace = true }
snafu = { workspace = true }
stringtheory = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
