[package]
name = "saluki-config2"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
facet = { workspace = true }
facet-json = { workspace = true }
facet-reflect = { workspace = true, features = ["alloc"] }
facet-value = { workspace = true, features = ["alloc", "std"] }
facet-yaml = { workspace = true }
saluki-error = { workspace = true }
snafu = { workspace = true }
stringtheory = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
