[package]
name = "saluki-context"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ahash = { workspace = true }
metrics = { workspace = true }
quick_cache = { workspace = true, features = ["ahash", "parking_lot"] }
saluki-error = { workspace = true }
saluki-metrics = { workspace = true }
stringtheory = { workspace = true }

[dev-dependencies]
metrics-util = { workspace = true, features = ["debugging"] }
