[package]
name = "saluki-context"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
crossbeam-queue = { workspace = true, features = ["alloc"] }
hashbrown = { workspace = true }
indexmap = { workspace = true }
memchr = { workspace = true }
metrics = { workspace = true }
quick_cache = { workspace = true, features = ["parking_lot"] }
saluki-common = { workspace = true }
saluki-error = { workspace = true }
saluki-metrics = { workspace = true }
serde = { workspace = true }
stringtheory = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tracing = { workspace = true }

[dev-dependencies]
metrics-util = { workspace = true, features = ["debugging"] }
proptest = { workspace = true }
